--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@
   font-style: normal;
 }
 
+body {
+    background: #FFEA00;
+    min-height: 100vh; /* Upewnij się, że body zajmuje pełną wysokość widoku */
+}
+
+body, html {
+    height: 100%;
+    overflow-x: hidden; /* zapobiega przewijaniu w poziomie */
+}
+
 
 .left-side h1,
 .left-side h2,
@@ -155,7 +165,11 @@ button {
 
         .subconscious {
             background: linear-gradient(to right, #FFD700, #FFEA00);
-            height:100%;
+            min-height: 100vh; /* Ustawienie minimalnej wysokości */
+            display: flex; /* Możesz używać flexboxa, aby lepiej kontrolować layout */
+            align-items: center; /* Dostosuj wyrównanie */
+            justify-content: center; /* Dostosuj wyrównanie */
+            overflow: hidden; 
         }
 
         #subconscious {
@@ -206,7 +220,12 @@ button {
             grid-template-columns: 1fr 1fr;
             height: 95vh;
             padding:3rem calc((100vw - 1300px) /2);
-        }
+            overflow:hidden;
+            padding: 20px; /* Upewnij się, że padding nie jest zbyt duży */
+    margin: 0 auto; /* Ustaw margines na auto, aby wyśrodkować */
+}
+            
+        
  
         .left-side {
             display:flex;
@@ -320,7 +339,7 @@ button {
             display: none; 
         }
 
-        @media screen and (max-width:768px) {
+        @media screen and (max-width:1024px) {
             .subconscious-container {
                 grid-template-columns:1fr;
                 padding: 2rem;
@@ -404,6 +423,24 @@ button {
         }
 
         .lion {
-            max-height:33vh;
+            max-height:30vh;
+        }
+
+        .werewolf {
+            max-height:10vh;
         }
     }
+
+    @media screen and (max-width: 600px) { /* Możesz dostosować breakpoint do swoich potrzeb */
+        .subconscious-container {
+            padding: 10px; /* Dostosuj padding dla mniejszych ekranów */
+        }
+        .left-side h1 {
+            font-size: 1.5rem; /* Dostosuj rozmiar czcionki */
+        }
+        
+        /* Możesz dodać więcej stylów responsywnych w tym bloku */
+    }
+
+    
+    
