--- a/style.css
+++ b/style.css
@@ -11,18 +11,94 @@
   font-style: normal;
 }
 
-body {
-    background: #FFEA00;
-    min-height: 100vh; /* Upewnij się, że body zajmuje pełną wysokość widoku */
-}
 
 body, html {
     height: 100%;
-    overflow-x: hidden; /* zapobiega przewijaniu w poziomie */
+    overflow-x: hidden; 
 }
 
+
+
+body {
+    background: #FFEA00;
+    min-height: 100vh; 
+}
+
+nav {
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    background-color: #249e75;
+    padding:0rem calc((100vw - 1300px) /2);
+    height:80px;
+    position:sticky;
+    top:0;
+    z-index:1000;
+}
+
+
+nav ul {
+    text-decoration:none;
+    flex-grow: 1;
+display: flex;
+justify-content: center; 
+}
+
+nav a {
+    transition:all 0.2s ease-in-out;
+    text-decoration:none;
+    color:black;
+    padding:0 1.5rem;
+}
+
+nav a:hover {
+    transform:scale(0.5);
+    color:white;
+}
+
+
 main {
-    min-height: calc(100vh - 60px); /* Ustaw wysokość na 100vh minus wysokość footer */
+    min-height: calc(100vh - 60px); 
+}
+
+
+.subconscious {
+    background: linear-gradient(to right, #FFD700, #FFEA00);
+    min-height: 100vh; 
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    padding:20px;
+    overflow: hidden; 
+}
+
+#subconscious {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+}
+
+#subconscious label {
+    font-weight: bold;
+}
+
+#subconscious input, 
+#subconscious textarea {
+width: 100%;
+padding: 10px;
+margin: 10px 0;
+border: 1px solid #249e75;
+border-radius: 5px;
+font-size: 1rem;
+transition: border-color 0.3s;
+}
+
+#subconscious input:focus, 
+#subconscious textarea:focus {
+border-color: #166e58;
+outline: none;
+box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .left-side h1,
@@ -40,6 +116,28 @@ button {
 .left-side ul
  {
     animation-delay: 1.5s; 
+}
+
+#hamburger {
+    display: none;
+    cursor: pointer;
+    padding: 0 1rem;
+    font-size: 2rem; 
+    color: black;
+}
+
+.lion {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain; 
+}
+
+
+
+#logo {
+    color:black;
+   font-size:3rem;
+    padding:0 2rem;
 }
 
 .fade-in {
@@ -75,20 +173,6 @@ button {
     }
 }
 
-        nav {
-            display:flex;
-            justify-content: center;
-            align-items:center;
-            background-color: #249e75;
-            padding:0rem calc((100vw - 1300px) /2);
-            height:80px;
-            position:sticky;
-            top:0;
-            z-index:1000;
-        }
-
-     
-
         .contact-details p, .social-media p {
             margin-bottom: 1rem;
             text-align: center;
@@ -111,105 +195,19 @@ button {
             color: #166e58;
         }
 
-
-        nav ul {
-            text-decoration:none;
-            flex-grow: 1; /* Allow ul to grow and fill space */
-    display: flex; /* Use flexbox for the ul */
-    justify-content: center; /* Center items in the nav */
-        }
-
-        nav a {
-            transition:all 0.2s ease-in-out;
-
-        }
-
-        #hamburger {
-            display: none;
-            cursor: pointer;
-            padding: 0 1rem;
-            font-size: 2rem; 
-            color: black;
-        }
-
-        .lion {
-            max-width: 100%;
-            height: auto;
-            object-fit: contain; 
-        }
-
-        nav a:hover {
-            transform:scale(0.5);
-        }
-
-        #logo {
-            color:black;
-           font-size:3rem;
-            padding:0 2rem;
-        }
-
-        nav a {
-            text-decoration:none;
-            color:black;
-            padding:0 1.5rem;
-        }
-
-       nav a:hover {
-            color:white;
-        }
-
         .photo {
             opacity: 0; 
             transform: translateY(20px); 
             animation: fadeInUp 0.8s forwards; 
         }
         
-        .photo:nth-child(1) { animation-delay: 0.5s; }
-        .photo:nth-child(2) { animation-delay: 0.7s; }
-        .photo:nth-child(3) { animation-delay: 0.9s; }
-        .photo:nth-child(4) { animation-delay: 1.1s; }
-        .photo:nth-child(5) { animation-delay: 1.3s; }
-        .photo:nth-child(6) { animation-delay: 1.5s; }
-        .photo:nth-child(7) { animation-delay: 1.7s; }
-
-        .subconscious {
-            background: linear-gradient(to right, #FFD700, #FFEA00);
-            min-height: 100vh; /* Ustawienie minimalnej wysokości */
-            display: flex; /* Możesz używać flexboxa, aby lepiej kontrolować layout */
-            align-items: center; /* Dostosuj wyrównanie */
-            justify-content: center; /* Dostosuj wyrównanie */
-            padding:20px;
-            overflow: hidden; 
-        }
-
-        #subconscious {
-            background-color: rgba(255, 255, 255, 0.9);
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-        }
-
-        #subconscious label {
-            font-weight: bold;
-        }
-
-        #subconscious input, 
-#subconscious textarea {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #249e75;
-    border-radius: 5px;
-    font-size: 1rem;
-    transition: border-color 0.3s;
-}
-
-#subconscious input:focus, 
-#subconscious textarea:focus {
-    border-color: #166e58;
-    outline: none;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-}
+.photo:nth-child(1) { animation-delay: 0.5s; }
+.photo:nth-child(2) { animation-delay: 0.7s; }
+.photo:nth-child(3) { animation-delay: 0.9s; }
+.photo:nth-child(4) { animation-delay: 1.1s; }
+.photo:nth-child(5) { animation-delay: 1.3s; }
+.photo:nth-child(6) { animation-delay: 1.5s; }
+.photo:nth-child(7) { animation-delay: 1.7s; }
 
 .social-media h2 {
     margin-top: 10px;
@@ -225,302 +223,362 @@ button {
     color: #166e58;
 }
 
-        .subconscious-container {
-            display:grid;
-            grid-template-columns: 1fr 1fr;
-            height: 95vh;
-            padding:3rem calc((100vw - 1300px) /2);
-            overflow:hidden;
-            padding: 20px; 
-            margin: 0 auto; 
+.subconscious-container {
+    display:grid;
+     grid-template-columns: 1fr 1fr;
+    height: 95vh;
+     padding:3rem calc((100vw - 1300px) /2);
+     overflow:hidden;
+      padding: 20px; 
+     margin: 0 auto; 
 }
-            
-        
+                
  
-        .left-side {
-            display:flex;
-            flex-direction:column;
-            justify-content: center;
-            align-items:flex-start;
-            padding:0 2rem;
-        }
+.left-side {
+     display:flex;
+     flex-direction:column;
+     justify-content: center;
+     align-items:flex-start;
+     padding:0 2rem;
+}
 
-        .left-side h1
+.left-side h1
          {
-            margin-bottom:1rem;
-            font-size:3rem;
-            animation-delay: 0.5s; 
-        }
+     margin-bottom:1rem;
+     font-size:3rem;
+     animation-delay: 0.5s; 
+ }
 
        
+.left-side p {
+     margin-bottom:1rem;
+    font-size:1.5rem;
+    line-height:1.5;
+    animation-delay: 1s; 
+}
 
-        .left-side p {
-            margin-bottom:1rem;
-            font-size:1.5rem;
-            line-height:1.5;
-            animation-delay: 1s; 
-        }
+.right-side {
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    padding:0 2rem;
+    position: relative;
+    z-index: 1; 
+}
 
-        .right-side {
-            display:flex;
-            justify-content: center;
-            align-items:center;
-            padding:0 2rem;
-        }
+.right-side img:hover {
+    transform: rotate(15deg);
+}
 
-        button {
-            border:none;
-            border-radius:50px;
-            background-color: black;
-            color:white;
-            cursor:none;
-            animation-delay: 1.5s; 
-            padding:1rem;
-        }
+button {
+    border:none;
+    border-radius:50px;
+    background-color: black;
+    color:white;
+    cursor:none;
+    animation-delay: 1.5s; 
+    padding:1rem;
+}
 
-        footer {
-            display:flex;
-            justify-content: space-between;
-            align-items:center;
-            background-color: #2b9a6e;
-            padding:0rem calc((100vw - 1300px) /2);
-            height:60px;
-            flex-wrap: wrap; 
+footer {
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    background-color: #2b9a6e;
+    padding:0rem calc((100vw - 1300px) /2);
+    height:60px;
+    flex-wrap: wrap; 
     font-size: 1rem;
     text-align: center; 
-        }
+}
 
-        .right-side {
-            position: relative;
-            z-index: 1; 
-        }
-        
-        .left-side {
-            z-index: 2; 
-        }
-        main img {
-            transition:transform 0.4s ease-in-out;
-        }
 
-        main img:hover {
-            transform:scale(0.5) rotate(360deg);
-        }
+.left-side {
+    z-index: 2; 
+}
 
-        #menu-toggle:checked + #hamburger + #nav-items {
-            display: flex; /* Pokaż menu, gdy checkbox jest zaznaczony */
-        }
+main img {
+     transition:transform 0.4s ease-in-out;
+}
+
+main img:hover {
+    transform:scale(0.5) rotate(360deg);
+}
+
+#menu-toggle:checked + #hamburger + #nav-items {
+    display: flex; 
+}
         
 
-        .container-photos {
-            max-width:1224px;
-            width:90%;
-            margin:auto;
-            padding: 40px 0;
-        }
+.container-photos {
+     max-width:1224px;
+     width:90%;
+    margin:auto;
+    padding: 40px 0;
+}
 
-        .container-photos img {
-            transition: transform 0.2s ease-in-out;
-        }
+.container-photos img {
+    transition: transform 0.2s ease-in-out;
+}
 
-        .container-photos img:hover {
-            transform:scale(0.5);
-        }
+.container-photos img:hover {
+    transform:scale(0.5);
+}
 
-        .photos {
-            display:flex;
-            gap:20px;
-        }
+.photos {
+     display:flex;
+     gap:20px;
+}
 
-        .column {
-            display:flex;
-            flex-direction: column;
-            gap:20px;
-        }
+.photo {
+    position: relative;
+}
 
-        .photo img {
-            width:100%;
-            height:100%;
-            border-radius:5px;
-            object-fit:cover;
-        }
+.photo::before {
+     content: "";
+     position: absolute; 
+    top: 0; 
+    left: 0; 
+    right: 0;
+    bottom: 0; 
+    background: rgba(0, 0, 0, 0.3); 
+    opacity: 0; 
+    transition: opacity 0.4s ease; 
+}
+        
+.photo:hover::before {
+    opacity: 1; 
+}
 
-        footer em {
-            font-size:2rem;
-            text-decoration: underline;
-        }
+        
+.flip-container {
+    perspective: 1000px; 
+}
 
-        #menu-toggle {
-            display: none; 
-        }
+.flip-inner {
+    position: relative; 
+    transition: transform 0.6s; 
+    transform-style: preserve-3d; 
+}
 
-        @media screen and (max-width:1024px) {
-            .subconscious-container {
-                grid-template-columns:1fr;
-                padding: 2rem;
+.flip-container:hover .flip-inner {
+    transform: rotateY(180deg); 
+}
+
+.flip-back {
+     transform: rotateY(180deg);
+}
+        
+.photo {
+    display: flex; 
+    align-items: center;
+    justify-content: center; 
+}
+        
+.column {
+    display:flex;
+    flex-direction: column;
+    gap:20px;
+}
+
+.photo img {
+     width:100%;
+    height:100%;
+    border-radius:5px;
+    object-fit:cover;
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+
+.photo img:hover {
+    transform: scale(1.1); 
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3); 
+}
+
+footer em {
+    font-size:2rem;
+    text-decoration: underline;
+}
+
+#menu-toggle {
+    display: none; 
+}
+
+@media screen and (max-width:1024px) {
+
+.subconscious-container {
+        grid-template-columns:1fr;
+        padding: 2rem;
         text-align: center; 
-            }
+}
 
-            #nav-items {
-                position: absolute;
-                background: #249e75; 
-            }
+#nav-items {
+        position: absolute;
+        background: #249e75; 
+}
 
             
-            .left-side, .right-side {
-                padding: 1rem; 
-            }
+.left-side, .right-side {
+        padding: 1rem; 
+}
 
          
 
-            .left-side h1 {
-                font-size: 2rem; 
-            }
+.left-side h1 {
+        font-size: 2rem; 
+}
         
-            .left-side p {
-                font-size: 1.2rem; 
-                line-height: 1.4; 
-            }
+.left-side p {
+        font-size: 1.2rem; 
+        line-height: 1.4; 
+}
         
-            button {
-                padding: 0.8rem;
-                font-size: 1rem; 
-            }
+button {
+        padding: 0.8rem;
+        font-size: 1rem; 
+}
 
-            footer {
-                flex-direction: column; 
-            }
+footer {
+        flex-direction: column; 
+}
 
-            #nav-items {
-                display: none; 
-                flex-direction: column;
-                width: 100%; 
-                position: absolute;
-                top: 150px; 
-                left: 0;
-                background-color: #249e75; 
-                z-index: 200; 
-            }
+#nav-items {
+        display: none; 
+        flex-direction: column;
+        width: 100%; 
+        position: absolute;
+        top: 150px; 
+        left: 0;
+        background-color: #249e75; 
+        z-index: 200; 
+}
 
-            #nav-items a {
-                padding: 1rem; 
-                text-align: center;
-                width: 100%; 
-            }
+#nav-items a {
+        padding: 1rem; 
+        text-align: center;
+        width: 100%; 
+}
 
             
-            #hamburger {
-                display: block; 
-            }
+#hamburger {
+        display: block; 
+}
 
-            
 
-            #menu-toggle:checked + #hamburger + #nav-items {
-                display: flex; 
-            }
+#menu-toggle:checked + #hamburger + #nav-items {
+        display: flex; 
+}
 
-            #menu-toggle {
-                display: none; 
-        }
+#menu-toggle {
+        display: none; 
+}
 
-        #logo {
-            font-size: 2rem;
-        }
+#logo {
+        font-size: 2rem;
+}
 
-        .photos {
-            flex-direction: column;
-        }
+.photos {
+    flex-direction: column;
+}
 
-        .subconscious-container h1 {
-            font-size: 2rem;
-        }
+.subconscious-container h1 {
+        font-size: 2rem;
+}
     
-        #subconscious input,
-        #subconscious textarea {
-            font-size: 1.2rem;
-        }
+#subconscious input,
+#subconscious textarea {
+        font-size: 1.2rem;
+}
     
-        button {
-            font-size: 1.2rem;
-            padding: 10px;
-        }
+button {
+        font-size: 1.2rem;
+        padding: 10px;
+}
 
-        .lion {
-            max-height:30vh;
-        }
+.lion {
+        max-height:30vh;
+}
 
-        .werewolf {
-            max-height:10vh;
-        }
+.werewolf {
+        max-height:10vh;
+}
 
-        #nav-items {
-            flex-direction: column;
-            display: none; /* Domyślnie ukryte */
-            top:80px;
-        }
+#nav-items {
+        flex-direction: column;
+        display: none; 
+        top:80px;
+}
     
-        #menu-toggle:checked + #hamburger + #nav-items {
-            display: flex; /* Wyświetl menu, gdy checkbox jest zaznaczony */
-        }
+#menu-toggle:checked + #hamburger + #nav-items {
+        display: flex; 
+}
     }
 
-    @media screen and (max-width: 600px) { 
-        .subconscious-container {
-            padding: 10px; 
-            height:auto;
-        }
-        .left-side h1 {
-            font-size: 1.5rem; 
-        }
-        nav {
-            padding: 10px; 
-            height:auto;
-                overflow: hidden; /* Prevent overflow */
-        }
-        #menu-toggle {
-            height:auto;
-        }
-        footer {
-            flex-direction: column;
-            padding: 10px; /* Zmniejsz padding w przypadku małych ekranów */
-            height: auto; /* Umożliwiając footerowi dopasowanie do treści */
-        }
+
+
+
+@media screen and (max-width: 600px) { 
+.subconscious-container {
+        padding: 10px; 
+        height:auto;
+}
+
+.left-side h1 {
+        font-size: 1.5rem; 
+    }
+
+
+nav {
+        padding: 10px; 
+        height:auto;
+        overflow: hidden; 
+}
+        
+#menu-toggle {
+        height:auto;
+}
+
+        
+
+footer {
+        flex-direction: column;
+        padding: 10px; 
+        height: auto; 
+}
        
       
-         #hamburger {
-        display: block; /* Ensure visible on small screens */
-    }
+#hamburger {
+        display: block;
+}
 
-    #nav-items {
-        flex-direction: column; /* Arrange items in a column */
-        display: none; /* Hide by default */
-        position: fixed; /* Position it fixed */
-        background-color: #249e75; /* Background color */
-        width: 100%; /* Full-width for mobile */
-        top: 76px; /* Below the nav */
-        left: 0; /* Align to the left */
-    }
+#nav-items {
+        flex-direction: column;
+        display: none; 
+        position: fixed; 
+        background-color: #249e75; 
+        width: 100%; 
+        top: 76px; 
+        left: 0; 
+}
 
-    #menu-toggle:checked + #hamburger + #nav-items {
-        display: flex; /* Show menu when checked */
+#menu-toggle:checked + #hamburger + #nav-items {
+        display: flex; 
     }
         
     }
 
 
     
-    @media screen and (max-width: 470px) { 
-        #nav-items {
+@media screen and (max-width: 470px) { 
+#nav-items {
             top: 113px; 
-
-        }
+}
         
     }
 
-    @media screen and (max-width: 340px) { 
-        #nav-items {
-            top: 152px; 
-
-        }
+@media screen and (max-width: 340px) { 
+#nav-items {
+        top: 152px; 
+}
         
     }
 
